--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <embed
-    src="./.pdf"
+    src="./LIKITHA_K.pdf"
     type="application/pdf"
     frameBorder="0"
     scrolling="auto"
